--- a/site/newak/software/config/endpoints.yaml
+++ b/site/newak/software/config/endpoints.yaml
@@ -22,42 +22,44 @@ metadata:
           pattern: DOMAIN
         - path: .ucp.shipyard.host_fqdn_override.public.host
           pattern: DOMAIN
-#        - path: .ucp.physicalprovisioner.host_fqdn_override.public.host
-#          pattern: DOMAIN
+        - path: .ucp.physicalprovisioner.host_fqdn_override.public.host
+          pattern: DOMAIN
         - path: .ucp.maas_region.host_fqdn_override.public.host
           pattern: DOMAIN
         - path: .ceph.object_store.host_fqdn_override.public.host
           pattern: DOMAIN
         - path: .ceph.ceph_object_store.host_fqdn_override.public.host
           pattern: DOMAIN
-#    - src:
-#        schema: deckhand/Certificate/v1
-#        name: ingress-crt
-#        path: .
-#      dest:
-#        - path: .ucp.identity.host_fqdn_override.public.tls.crt
-#        - path: .ucp.shipyard.host_fqdn_override.public.tls.crt
-#        - path: .ceph.object_store.host_fqdn_override.public.tls.crt
-#        - path: .ceph.ceph_object_store.host_fqdn_override.public.tls.crt
-#    - src:
-#        schema: deckhand/CertificateAuthority/v1
-#        name: ingress-ca
-#        path: .
-#      dest:
-#        - path: .ucp.identity.host_fqdn_override.public.tls.ca
-#        - path: .ucp.shipyard.host_fqdn_override.public.tls.ca
-#        - path: .ceph.object_store.host_fqdn_override.public.tls.ca
-#        - path: .ceph.ceph_object_store.host_fqdn_override.public.tls.ca
-#    - src:
-#        schema: deckhand/CertificateKey/v1
-#        name: ingress-key
-#        path: .
-#      dest:
-#        - path: .ucp.identity.host_fqdn_override.public.tls.key
-#        - path: .ucp.shipyard.host_fqdn_override.public.tls.key
-#        - path: .ucp.physicalprovisioner.host_fqdn_override.public.tls.key
-#        - path: .ceph.object_store.host_fqdn_override.public.tls.key
-#        - path: .ceph.ceph_object_store.host_fqdn_override.public.tls.key
+    - src:
+        schema: deckhand/Certificate/v1
+        name: ingress-crt
+        path: .
+      dest:
+        - path: .ucp.identity.host_fqdn_override.public.tls.crt
+        - path: .ucp.shipyard.host_fqdn_override.public.tls.crt
+        - path: .ucp.physicalprovisioner.host_fqdn_override.public.tls.crt
+        - path: .ceph.object_store.host_fqdn_override.public.tls.crt
+        - path: .ceph.ceph_object_store.host_fqdn_override.public.tls.crt
+    - src:
+        schema: deckhand/CertificateAuthority/v1
+        name: ingress-ca
+        path: .
+      dest:
+        - path: .ucp.identity.host_fqdn_override.public.tls.ca
+        - path: .ucp.shipyard.host_fqdn_override.public.tls.ca
+        - path: .ucp.physicalprovisioner.host_fqdn_override.public.tls.ca
+        - path: .ceph.object_store.host_fqdn_override.public.tls.ca
+        - path: .ceph.ceph_object_store.host_fqdn_override.public.tls.ca
+    - src:
+        schema: deckhand/CertificateKey/v1
+        name: ingress-key
+        path: .
+      dest:
+        - path: .ucp.identity.host_fqdn_override.public.tls.key
+        - path: .ucp.shipyard.host_fqdn_override.public.tls.key
+        - path: .ucp.physicalprovisioner.host_fqdn_override.public.tls.key
+        - path: .ceph.object_store.host_fqdn_override.public.tls.key
+        - path: .ceph.ceph_object_store.host_fqdn_override.public.tls.key
 data:
   ucp:
     identity:
@@ -75,11 +77,11 @@ data:
       path:
         default: /v3
       scheme:
-        default: "http"
+        default: "https"
         internal: "http"
       port:
         api:
-          default: 80
+          default: 443
           internal: 5000
     armada:
       name: armada
@@ -199,16 +201,16 @@ data:
         api:
           default: 9000
           nodeport: 31900
-          public: 80
+          public: 443
       path:
         default: /api/v1.0
       scheme:
         default: "http"
-        public: 'http'
+        public: "https"
       host_fqdn_override:
         default: null
         public:
-          host: drydock-uc.DOMAIN
+          host: drydock.DOMAIN
     maas_region:
       name: maas-region
       hosts:
@@ -229,7 +231,7 @@ data:
       host_fqdn_override:
         default: null
         public:
-          host: maas-uc.DOMAIN
+          host: maas.DOMAIN
     maas_ingress:
       hosts:
         default: maas-ingress
@@ -239,8 +241,8 @@ data:
       port:
         http:
           default: 80
-        http:
-          default: 80
+        https:
+          default: 443
         ingress_default_server:
           default: 8383
         error_pages:
@@ -271,12 +273,12 @@ data:
       port:
         api:
           default: 9000
-          public: 80
+          public: 443
       path:
         default: /api/v1.0
       scheme:
         default: "http"
-        public: "http"
+        public: "https"
       host_fqdn_override:
         default: null
         public:
@@ -309,11 +311,11 @@ data:
         default: /swift/v1
       scheme:
         default: "http"
-        public: "http"
+        public: "https"
       port:
         api:
           default: 8088
-          public: 80
+          public: 443
     ceph_object_store:
       name: radosgw
       namespace: ceph
@@ -328,11 +330,11 @@ data:
         default: /auth/v1.0
       scheme:
         default: "http"
-        public: "http"
+        public: "https"
       port:
         api:
           default: 8088
-          public: 80
+          public: 443
     ceph_mon:
       namespace: ceph
       hosts:
@@ -423,63 +425,63 @@ metadata:
           pattern: DOMAIN
         - path: .osh.volumev3.host_fqdn_override.public.host
           pattern: DOMAIN
-#    - src:
-#        schema: deckhand/Certificate/v1
-#        name: ingress-crt
-#        path: .
-#      dest:
-#        - path: .osh.object_store.host_fqdn_override.public.tls.crt
-#        - path: .osh.ceph_object_store.host_fqdn_override.public.tls.crt
-#        - path: .osh.identity.host_fqdn_override.public.tls.crt
-#        - path: .osh.orchestration.host_fqdn_override.public.tls.crt
-#        - path: .osh.cloudformation.host_fqdn_override.public.tls.crt
-#        - path: .osh.dashboard.host_fqdn_override.public.tls.crt
-#        - path: .osh.image.host_fqdn_override.public.tls.crt
-#        - path: .osh.volume.host_fqdn_override.public.tls.crt
-#        - path: .osh.volumev2.host_fqdn_override.public.tls.crt
-#        - path: .osh.volumev3.host_fqdn_override.public.tls.crt
-#        - path: .osh.compute.host_fqdn_override.public.tls.crt
-#        - path: .osh.compute_novnc_proxy.host_fqdn_override.public.tls.crt
-#        - path: .osh.placement.host_fqdn_override.public.tls.crt
-#        - path: .osh.network.host_fqdn_override.public.tls.crt
-#    - src:
-#        schema: deckhand/CertificateAuthority/v1
-#        name: ingress-ca
-#        path: .
-#      dest:
-#        - path: .osh.object_store.host_fqdn_override.public.tls.ca
-#        - path: .osh.ceph_object_store.host_fqdn_override.public.tls.ca
-#        - path: .osh.identity.host_fqdn_override.public.tls.ca
-#        - path: .osh.orchestration.host_fqdn_override.public.tls.ca
-#        - path: .osh.cloudformation.host_fqdn_override.public.tls.ca
-#        - path: .osh.dashboard.host_fqdn_override.public.tls.ca
-#        - path: .osh.image.host_fqdn_override.public.tls.ca
-#        - path: .osh.volume.host_fqdn_override.public.tls.ca
-#        - path: .osh.volumev2.host_fqdn_override.public.tls.ca
-#        - path: .osh.volumev3.host_fqdn_override.public.tls.ca
-#        - path: .osh.compute.host_fqdn_override.public.tls.ca
-#        - path: .osh.compute_novnc_proxy.host_fqdn_override.public.tls.ca
-#        - path: .osh.placement.host_fqdn_override.public.tls.ca
-#        - path: .osh.network.host_fqdn_override.public.tls.ca
-#    - src:
-#        schema: deckhand/CertificateKey/v1
-#        name: ingress-key
-#        path: .
-#      dest:
-#        - path: .osh.object_store.host_fqdn_override.public.tls.key
-#        - path: .osh.ceph_object_store.host_fqdn_override.public.tls.key
-#        - path: .osh.identity.host_fqdn_override.public.tls.key
-#        - path: .osh.orchestration.host_fqdn_override.public.tls.key
-#        - path: .osh.cloudformation.host_fqdn_override.public.tls.key
-#        - path: .osh.dashboard.host_fqdn_override.public.tls.key
-#        - path: .osh.image.host_fqdn_override.public.tls.key
-#        - path: .osh.volume.host_fqdn_override.public.tls.key
-#        - path: .osh.volumev2.host_fqdn_override.public.tls.key
-#        - path: .osh.volumev3.host_fqdn_override.public.tls.key
-#        - path: .osh.compute.host_fqdn_override.public.tls.key
-#        - path: .osh.compute_novnc_proxy.host_fqdn_override.public.tls.key
-#        - path: .osh.placement.host_fqdn_override.public.tls.key
-#        - path: .osh.network.host_fqdn_override.public.tls.key
+    - src:
+        schema: deckhand/Certificate/v1
+        name: ingress-crt
+        path: .
+      dest:
+        - path: .osh.object_store.host_fqdn_override.public.tls.crt
+        - path: .osh.ceph_object_store.host_fqdn_override.public.tls.crt
+        - path: .osh.identity.host_fqdn_override.public.tls.crt
+        - path: .osh.orchestration.host_fqdn_override.public.tls.crt
+        - path: .osh.cloudformation.host_fqdn_override.public.tls.crt
+        - path: .osh.dashboard.host_fqdn_override.public.tls.crt
+        - path: .osh.image.host_fqdn_override.public.tls.crt
+        - path: .osh.volume.host_fqdn_override.public.tls.crt
+        - path: .osh.volumev2.host_fqdn_override.public.tls.crt
+        - path: .osh.volumev3.host_fqdn_override.public.tls.crt
+        - path: .osh.compute.host_fqdn_override.public.tls.crt
+        - path: .osh.compute_novnc_proxy.host_fqdn_override.public.tls.crt
+        - path: .osh.placement.host_fqdn_override.public.tls.crt
+        - path: .osh.network.host_fqdn_override.public.tls.crt
+    - src:
+        schema: deckhand/CertificateAuthority/v1
+        name: ingress-ca
+        path: .
+      dest:
+        - path: .osh.object_store.host_fqdn_override.public.tls.ca
+        - path: .osh.ceph_object_store.host_fqdn_override.public.tls.ca
+        - path: .osh.identity.host_fqdn_override.public.tls.ca
+        - path: .osh.orchestration.host_fqdn_override.public.tls.ca
+        - path: .osh.cloudformation.host_fqdn_override.public.tls.ca
+        - path: .osh.dashboard.host_fqdn_override.public.tls.ca
+        - path: .osh.image.host_fqdn_override.public.tls.ca
+        - path: .osh.volume.host_fqdn_override.public.tls.ca
+        - path: .osh.volumev2.host_fqdn_override.public.tls.ca
+        - path: .osh.volumev3.host_fqdn_override.public.tls.ca
+        - path: .osh.compute.host_fqdn_override.public.tls.ca
+        - path: .osh.compute_novnc_proxy.host_fqdn_override.public.tls.ca
+        - path: .osh.placement.host_fqdn_override.public.tls.ca
+        - path: .osh.network.host_fqdn_override.public.tls.ca
+    - src:
+        schema: deckhand/CertificateKey/v1
+        name: ingress-key
+        path: .
+      dest:
+        - path: .osh.object_store.host_fqdn_override.public.tls.key
+        - path: .osh.ceph_object_store.host_fqdn_override.public.tls.key
+        - path: .osh.identity.host_fqdn_override.public.tls.key
+        - path: .osh.orchestration.host_fqdn_override.public.tls.key
+        - path: .osh.cloudformation.host_fqdn_override.public.tls.key
+        - path: .osh.dashboard.host_fqdn_override.public.tls.key
+        - path: .osh.image.host_fqdn_override.public.tls.key
+        - path: .osh.volume.host_fqdn_override.public.tls.key
+        - path: .osh.volumev2.host_fqdn_override.public.tls.key
+        - path: .osh.volumev3.host_fqdn_override.public.tls.key
+        - path: .osh.compute.host_fqdn_override.public.tls.key
+        - path: .osh.compute_novnc_proxy.host_fqdn_override.public.tls.key
+        - path: .osh.placement.host_fqdn_override.public.tls.key
+        - path: .osh.network.host_fqdn_override.public.tls.key
 data:
   osh:
     object_store:
@@ -496,11 +498,11 @@ data:
         default: /swift/v1/KEY_$(tenant_id)s
       scheme:
         default: "http"
-        public: "http"
+        public: "https"
       port:
         api:
           default: 8088
-          public: 80
+          public: 443
     ceph_object_store:
       name: radosgw
       namespace: openstack
@@ -515,11 +517,11 @@ data:
         default: /auth/v1.0
       scheme:
         default: "http"
-        public: "http"
+        public: "https"
       port:
         api:
           default: 8088
-          public: 80
+          public: 443
     oslo_db:
       hosts:
         default: mariadb
@@ -596,11 +598,11 @@ data:
       path:
         default: /v3
       scheme:
-        default: "http"
+        default: "https"
         internal: "http"
       port:
         api:
-          default: 80
+          default: 443
           internal: 5000
     glance_oslo_messaging:
       namespace: openstack
@@ -641,11 +643,11 @@ data:
         default: null
       scheme:
         default: "http"
-        public: "http"
+        public: "https"
       port:
         api:
           default: 9292
-          public: 80
+          public: 443
     image_registry:
       name: glance-registry
       hosts:
@@ -700,11 +702,11 @@ data:
         default: "/v1/%(tenant_id)s"
       scheme:
         default: "http"
-        public: "http"
+        public: "https"
       port:
         api:
           default: 8776
-          public: 80
+          public: 443
     volumev2:
       name: cinderv2
       hosts:
@@ -718,11 +720,11 @@ data:
         default: "/v2/%(tenant_id)s"
       scheme:
         default: "http"
-        public: "http"
+        public: "https"
       port:
         api:
           default: 8776
-          public: 80 
+          public: 443
     volumev3:
       name: cinderv3
       hosts:
@@ -736,11 +738,11 @@ data:
         default: "/v3/%(tenant_id)s"
       scheme:
         default: "http"
-        public: "http"
+        public: "https"
       port:
         api:
           default: 8776
-          public: 80
+          public: 443
     heat_oslo_messaging:
       namespace: openstack
       hosts:
@@ -780,11 +782,11 @@ data:
         default: "/v1/%(project_id)s"
       scheme:
         default: "http"
-        public: "http"
+        public: "https"
       port:
         api:
           default: 8004
-          public: 80
+          public: 443
     cloudformation:
       name: heat-cfn
       hosts:
@@ -798,11 +800,11 @@ data:
         default: /v1
       scheme:
         default: "http"
-        public: "http"
+        public: "https"
       port:
         api:
           default: 8000
-          public: 80
+          public: 443
     cloudwatch:
       name: heat-cloudwatch
       hosts:
@@ -858,11 +860,11 @@ data:
         default: null
       scheme:
         default: "http"
-        public: "http"
+        public: "https"
       port:
         api:
           default: 9696
-          public: 80
+          public: 443
     nova_oslo_messaging:
       namespace: openstack
       hosts:
@@ -902,13 +904,13 @@ data:
         default: "/v2/%(tenant_id)s"
       scheme:
         default: "http"
-        public: "http"
+        public: "https"
       port:
         api:
           default: 8774
-          public: 80
+          public: 443
         novncproxy:
-          default: 80
+          default: 443
     compute_metadata:
       name: nova
       hosts:
@@ -937,11 +939,11 @@ data:
         default: /vnc_auto.html
       scheme:
         default: "http"
-        public: "http"
+        public: "https"
       port:
         novnc_proxy:
           default: 6080
-          public: 80
+          public: 443
     compute_spice_proxy:
       name: nova
       hosts:
@@ -968,11 +970,11 @@ data:
         default: /
       scheme:
         default: "http"
-        public: "http"
+        public: "https"
       port:
         api:
           default: 8778
-          public: 80
+          public: 443
     dashboard:
       name: horizon
       hosts:
@@ -986,11 +988,11 @@ data:
         default: null
       scheme:
         default: "http"
-        public: "http"
+        public: "https"
       port:
         web:
           default: 80
-          public: 80
+          public: 443
 ...
 ---
 schema: pegleg/EndpointCatalogue/v1
@@ -1013,30 +1015,30 @@ metadata:
           pattern: DOMAIN
         - path: .osh_infra.nagios.host_fqdn_override.public.host
           pattern: DOMAIN
-#    - src:
-#        schema: deckhand/Certificate/v1
-#        name: ingress-crt
-#        path: .
-#      dest:
-#        - path: .osh_infra.kibana.host_fqdn_override.public.tls.crt
-#        - path: .osh_infra.grafana.host_fqdn_override.public.tls.crt
-#        - path: .osh_infra.nagios.host_fqdn_override.public.tls.crt
-#    - src:
-#        schema: deckhand/CertificateAuthority/v1
-#        name: ingress-ca
-#        path: .
-#      dest:
-#        - path: .osh_infra.kibana.host_fqdn_override.public.tls.ca
-#        - path: .osh_infra.grafana.host_fqdn_override.public.tls.ca
-#        - path: .osh_infra.nagios.host_fqdn_override.public.tls.ca
-#    - src:
-#        schema: deckhand/CertificateKey/v1
-#        name: ingress-key
-#        path: .
-#      dest:
-#        - path: .osh_infra.kibana.host_fqdn_override.public.tls.key
-#        - path: .osh_infra.grafana.host_fqdn_override.public.tls.key
-#        - path: .osh_infra.nagios.host_fqdn_override.public.tls.key
+    - src:
+        schema: deckhand/Certificate/v1
+        name: ingress-crt
+        path: .
+      dest:
+        - path: .osh_infra.kibana.host_fqdn_override.public.tls.crt
+        - path: .osh_infra.grafana.host_fqdn_override.public.tls.crt
+        - path: .osh_infra.nagios.host_fqdn_override.public.tls.crt
+    - src:
+        schema: deckhand/CertificateAuthority/v1
+        name: ingress-ca
+        path: .
+      dest:
+        - path: .osh_infra.kibana.host_fqdn_override.public.tls.ca
+        - path: .osh_infra.grafana.host_fqdn_override.public.tls.ca
+        - path: .osh_infra.nagios.host_fqdn_override.public.tls.ca
+    - src:
+        schema: deckhand/CertificateKey/v1
+        name: ingress-key
+        path: .
+      dest:
+        - path: .osh_infra.kibana.host_fqdn_override.public.tls.key
+        - path: .osh_infra.grafana.host_fqdn_override.public.tls.key
+        - path: .osh_infra.nagios.host_fqdn_override.public.tls.key
     - src:
         schema: pegleg/CommonAddresses/v1
         name: common-addresses
@@ -1163,11 +1165,11 @@ data:
         default: null
       scheme:
         default: "http"
-        public: "http"
+        public: "https"
       port:
         grafana:
           default: 3000
-          public: 80
+          public: 443
     monitoring:
       name: prometheus
       namespace: osh-infra
@@ -1199,11 +1201,11 @@ data:
         default: null
       scheme:
         default: "http"
-        public: "http"
+        public: "https"
       port:
         kibana:
           default: 5601
-          public: 80
+          public: 443
     alerts:
       name: alertmanager
       namespace: osh-infra
@@ -1301,11 +1303,11 @@ data:
         default: null
       scheme:
         default: "http"
-        public: "http"
+        public: "https"
       port:
         http:
           default: 80
-          public: 80
+          public: 443
     ldap:
       hosts:
         default: ldap
